<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">车易行</string>
    <string name="lbs_default">中国海洋大学</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">毛毛虫</string>
    <string name="mobileNum">手机号</string>
    <string name="usernametag">用户名</string>
    <string name="car_info">车辆信息</string>
    <string name="address_info">地址信息</string>
    <string name="agreement">使用条款和协议</string>
    <string name="service_tel">客服电话: 4000-557117</string>
    <string name="exit">退出登录</string>
    <string name="user_register">没有账户？现在注册</string>
    <string name="user_login">已有账户？现在登陆</string>
    <string name="hello_world">Hello world!</string>
    <string name="district">全部区域</string>
    <string name="distance">距离</string>
    <string name="paymoney">去结算</string>
</resources>
